# wenet

./: .gitignore  constraints-whisper.txt  guide.md  requirements-onnx-cpu.txt  requirements-onnx-gpu-cu118.txt  requirements-onnx-gpu-cu121.txt
SDK/0.0.1/: CMakeLists.txt  README.md  wenet_static_ort_dynamic_sdk_engineering_plan.md
SDK/0.0.1/cmake/: Options.cmake
SDK/0.0.1/scripts/: export_nemo_onnx.py  run_wfst_sample_test.sh
SDK/0.0.2/: CMakeLists.txt  sherpa_onnx_wenet_development_plan.md
SDK/0.0.2/include/asr_sdk/: c_api.h  result.h  version.h
SDK/0.0.2/scripts/: export_wenet_onnx.py  prepare_runtime_package.sh  run_onnx_recompiled_test.sh  run_zipformer_smoke_test.sh
SDK/0.0.2/src/audio/: wav_reader.cc
SDK/0.0.2/src/sdk/: asr_engine.cc
SDK/0.0.2/src/sherpa_onnx_wenet/: streaming_ctc_model_info.h  token_table.cc  token_table.h  whisper_feature_extractor.cc  whisper_feature_extractor.h  zipformer2_ctc_onnx_backend.cc  zipformer2_ctc_onnx_backend.h
SDK/0.0.2/src/utils/: file_utils.cc  json.h
SDK/0.0.3/: CMakeLists.txt  README.md  flashlight_kenlm_development_plan_v0.0.2.md
SDK/0.0.3/cmake/: Options.cmake
SDK/0.0.3/scripts/: prepare_flashlight_runtime_package.sh  run_zipformer_smoke_test.sh
SDK/0.0.3/tools/: README.md  asr_package_eval.cc  summarize_asr_package_eval.py
SDK/0.0.4/: CMakeLists.txt
SDK/0.0.4/cli/: README.md  asr_batch_decode.cc  asr_stream_file.cc  summarize_asr_package_eval.py
SDK/0.0.4/cmake/: FlashlightText.cmake  KenLM.cmake  (+1 more)
SDK/0.0.5/: CMakeLists.txt  README.md
SDK/0.1.0/: CMakeLists.txt  README.md  flashlight_kenlm_development_plan_v0.0.2.md  wenet_sdk_kenlm_rescore_plan.md
SDK/0.1.1/: CMakeLists.txt  README.md
SDK/0.1.1/cli/: asr_package_eval.cc  summarize_asr_package_eval.py  zipformer_ctc_flashlight_main.cc
SDK/0.1.1/cmake/: OnnxRuntimeDynamic.cmake
SDK/0.1.1/include/asr_sdk/: config.h
SDK/0.1.1/package_workflows/: prepare_flashlight_runtime_package.sh  verify_release_deps.sh
SDK/0.1.1/src/flashlight_decoder/: debug_trace.h  decoded_hypothesis.h  flashlight_asr_stream.cc  flashlight_asr_stream.h  flashlight_ctc_stream_decoder.cc  flashlight_result_mapper.cc  kenlm_rescorer.cc  kenlm_rescorer.h  output_sequence_mapper.h
SDK/0.1.1/src/package/: model_package.h
SDK/0.1.1/src/sdk/: asr_engine.cc  result_json.h
SDK/0.1.1/src/sherpa_onnx_wenet/: ctc_onnx_backend_factory.cc  ctc_onnx_backend_factory.h  nemo_ctc_onnx_backend.cc  nemo_ctc_onnx_backend.h  token_table.cc  token_table.h  whisper_feature_extractor.cc  whisper_feature_extractor.h
SDK/0.1.1/src/utils/: file_utils.h  timer.h
SDK/0.1.1/src/wenet_bridge/: wenet_result_mapper.cc  wenet_result_mapper.h  wenet_runtime_bridge.h  wenet_stream_adapter.cc
SDK/0.1.1/test/: debug_trace_test.cc  model_package_decoder_options_test.cc
SDK/1.0.0/: CMakeLists.txt  README.md  wenet_cpp_streaming_asr_sdk_plan.md
SDK/1.0.0/cmake/: FindONNXRuntime.cmake  FindOpenFst.cmake  FindPortAudio.cmake  Sanitizers.cmake
SDK/1.0.0/docs/: architecture.md  decoder.md  embedded_porting.md  model_package.md  performance_tuning.md
SDK/1.0.0/examples/c/: simple_c_api.c
SDK/1.0.0/examples/cpp/: batch_files.cc  minimal_streaming.cc
SDK/1.0.0/examples/embedded/: pseudo_audio_callback.cc
SDK/1.0.0/include/wenet_sdk/: asr_engine.h  c_api.h  config.h  result.h  stream.h  version.h
SDK/1.0.0/model_example/: TLG.fst  TLG.txt  config.yaml  ctc.onnx  manifest.json  tokens.txt  words.txt
SDK/1.0.0/scripts/: export_wenet_to_onnx.py  package_model.py  prepare_lm.sh  quantize_onnx.py  validate_package.py
SDK/1.0.0/src/core/: asr_engine.cc  c_api.cc  engine_resources.h  recognizer.cc  recognizer.h  stream_session.cc  stream_session.h
SDK/1.0.0/src/decoder/: blank_skipper.cc  blank_skipper.h  ctc_prefix_decoder.cc  ctc_prefix_decoder.h  ctc_wfst_decoder.cc  ctc_wfst_decoder.h  decoder_interface.h  fst_loader.cc  fst_loader.h  greedy_ctc_decoder.cc  greedy_ctc_decoder.h  nbest.cc  nbest.h  symbol_table.cc  symbol_table.h  token.cc  token.h
SDK/1.0.0/src/frontend/: cmvn.cc  cmvn.h  fbank.cc  fbank.h  feature_pipeline.cc  feature_pipeline.h  resampler.cc  resampler.h  ring_buffer.cc  ring_buffer.h  window.cc  window.h
SDK/1.0.0/src/io/: wav_reader.cc  wav_reader.h  wav_writer.cc  wav_writer.h
SDK/1.0.0/src/model/: asr_model.h  model_metadata.cc  model_metadata.h  onnx_ctc_model.cc  onnx_ctc_model.h  onnx_session_pool.cc  onnx_session_pool.h  tensor_utils.cc  tensor_utils.h
SDK/1.0.0/src/postprocess/: endpoint.cc  endpoint.h  text_normalizer.cc  text_normalizer.h  timestamp_estimator.cc  timestamp_estimator.h
SDK/1.0.0/src/utils/: checksum.cc  checksum.h  json.cc  json.h  logging.cc  logging.h  status.cc  status.h  thread_pool.cc  thread_pool.h  timer.cc  timer.h
SDK/1.0.0/tests/fixtures/onnx_toy/: config.yaml  encoder.onnx  manifest.json
SDK/1.0.0/tests/integration/: test_decode_toy_fst.cc  test_decode_wav.cc  test_model_forward.cc
SDK/1.0.0/tests/unit/: test_blank_skipper.cc  test_checksum.cc  test_cmvn.cc  test_ctc_collapse.cc  test_ctc_prefix_decoder.cc  test_ctc_wfst_decoder.cc  test_endpoint.cc  test_feature_pipeline.cc  test_model_package.cc  test_onnx_ctc_model.cc  test_streaming_boundaries.cc  test_symbol_table.cc
SDK/1.0.0/tools/: asr_stream_file.cc  asr_stream_mic.cc  benchmark.cc  inspect_fst.cc  inspect_model.cc  validate_model_package.cc
kenlm_lm/: README.md
kenlm_lm/data_preprocess/: convert_text_case.sh  process_text_data.sh
kenlm_lm/reports/: lexicon_report.json  train_kenlm_arpa.command.txt  train_kenlm_arpa.size.txt  words_report.json
kenlm_lm/run/: 1_train_lm.sh  2_convert_to_bin.sh  6_prepare_runtime.sh
kenlm_lm/tools/: run_003_acceptance_eval.sh  sample_eval_metadata.py  score_acceptance_results.py  score_sdk_results.py  train_kenlm_arpa.sh
train_pipline/s0/: 00_data_download_notice.sh  01_prepare_data.sh  02_make_dictionary.sh  03_compute_cmvn.sh  04_make_shards.sh  05_train.sh  06_decode_and_score.sh  07_export_jit.sh  README.md  _common.sh
wenet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+110 files in other folders)
